--- a/Pages/staff.html
+++ b/Pages/staff.html
@@ -5,9 +5,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Staff Médico</title>
     <link rel="shortcut icon" href="../Images/Logo.png">
 <link rel="stylesheet" href="/CSS/styles.css">
+<link rel="stylesheet" href="css/imagehover.min.css">
     <script src="https://kit.fontawesome.com/08288d2c26.js" crossorigin="anonymous"></script>
 
 </head>
@@ -67,45 +68,45 @@
 
         <div class="contenedorCard">
 
-
-            <div class="cards" id="card1">
-                <img class="cards__img"  src="../Images/DR6.jpg" alt="Imagen Dra Sevilla">
+            <div class="cards">
+                <img  src="../Images/DR6.jpg" alt="Imagen Dra Sevilla">
                 <div class="cards__info">
                     <p>Dra. Narcisa <span>Sevilla</span> </p>
                 </div>
-            </div>
 
-            <div class="cards" id="card1">
-                <img class="cards__img" src="../Images/DR3.jpg" alt="Imagen Dr Tovar">
+            </div>
+        
+            <div class="cards" >
+                <img src="../Images/DR3.jpg" alt="Imagen Dr Tovar">
                 <div class="cards__info">
                     <p>Dr. Teruel <span>Tovar</span></p>
                 </div>
             </div>
 
-            <div class="cards" id="card1">
-                <img class="cards__img" src="../Images/DR4.jpg" alt="Imagen Dr Mancebo">
+            <div class="cards">
+                <img src="../Images/DR4.jpg" alt="Imagen Dr Mancebo">
                 <div class="cards__info">
                     <p>Dr. Pablo <span>Mancebo</span></p>
                 </div>
             </div>
 
-            <div class="cards" id="card1">
-                <img class="cards__img" src="../Images/DR5.jpg" alt="Imagen Dr Villalobos">
+            <div class="cards">
+                <img src="../Images/DR5.jpg" alt="Imagen Dr Villalobos">
                 <div class="cards__info">
                     <p>Dr. Abraham <span>Villalobos</span></p>
                 </div>
             </div>
 
-            <div class="cards" id="card1">
+            <div class="cards" >
 
-                <img class="cards__img" src="../Images/DR2.jpg" alt="Imagen Dr Morán">
+                <img src="../Images/DR2.jpg" alt="Imagen Dr Morán">
                 <div class="cards__info">
                     <p>Dra. Antonella <span>Morán</span></p>
                 </div>
             </div>
 
-            <div class="cards" id="card1">
-                <img class="cards__img" src="../Images/DR1.jpg" alt="Imagen Dra Galvez">
+            <div class="cards">
+                <img src="../Images/DR1.jpg" alt="Imagen Dra Galvez">
 
                     <div class="cards__info">
                         <p>Dra. Leticia <span>Galvez</span></p>
