--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Nosotros</title>
     <link rel="shortcut icon" href="Images/Logo.png">
     <link rel="stylesheet" href="CSS/styles.css">
     <script src="https://kit.fontawesome.com/08288d2c26.js" crossorigin="anonymous"></script>
@@ -22,32 +22,31 @@
                 </a>
             </div>
 
-          
-                <ul>
+            <ul>
 
-                    <li>
-                        <a href="./Pages/especialidades.html">Especialidades</a>
-                    </li>
+                <li>
+                    <a href="./Pages/especialidades.html">Especialidades</a>
+                </li>
 
-                    <li>
-                        <a href="./Pages/staff.html">Staff Médico</a>
+                <li>
+                    <a href="./Pages/staff.html">Staff Médico</a>
 
-                    </li>
+                </li>
 
-                    <li>
-                        <a href="./Pages/obrasSociales.html">Obras Sociales</a>
-                    </li>
+                <li>
+                    <a href="./Pages/obrasSociales.html">Obras Sociales</a>
+                </li>
 
-                    <li>
-                        <a href="#testimonios">Testimonios</a>
-                    </li>
+                <li>
+                    <a href="#testimonios">Testimonios</a>
+                </li>
 
-                    <li>
-                        <a href="./Pages/contacto.html">Contacto</a>
+                <li>
+                    <a href="./Pages/contacto.html">Contacto</a>
 
-                    </li>
+                </li>
 
-                </ul>
+            </ul>
         </nav>
 
         </div>
@@ -96,9 +95,9 @@
 
         <section>
 
-            <div class="contenedorNosotros contenedorCentrar" >
+            <div class="contenedorNosotros contenedorCentrar">
 
-                <div class="infoNosotros__texto ">
+                <div class="infoNosotros__texto">
 
                     <h2>Nuestra Clínica</h2>
 
@@ -142,7 +141,7 @@
 
                 </div>
 
-                
+
                 <div class="infoNosotros__img">
                     <img src="Images/pexels-ksenia-chernaya-5765829.jpg" alt="imagen-nosotros">
                 </div>
@@ -205,9 +204,7 @@
 
 
         <!-- Valoraciones Slider -->
-
         <section class=" contenedorValoraciones">
-
             <h2>Testimonios de Nuestros pacientes</h2>
 
             <div class="valoracion" id="testimonios">
@@ -258,7 +255,10 @@
              <br> <span>Juan de la Torre </span> </p>
             </div> -->
 
+
+
         </section>
+        </div>
     </main>
 
     <footer>
