--- a/Pages/especialidades.html
+++ b/Pages/especialidades.html
@@ -8,6 +8,8 @@
     <title>Document</title>
     <link rel="shortcut icon" href="../Images/Logo.png">
     <link rel="stylesheet" href="/CSS/styles.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <script src="https://kit.fontawesome.com/08288d2c26.js" crossorigin="anonymous"></script>
 
 </head>
@@ -18,40 +20,47 @@
 
     <header>
 
-        <nav class="menuNav">
 
-            <div class="menuNav__logo">
-                <a href="/index.html">
-                    <img src="/Images/logo.png" alt="logo">
-                </a>
+        <nav class="navbar navbar-light fixed-top navbar-expand-lg navbarBg">
+            <div class="container-fluid">
+                <a class="navbar-brand" href="../index.html"> <img class="navbarBg__logo" src="../Images/logo.png"
+                        alt="logoNavegacion"></a>
+                <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas"
+                    data-bs-target="#offcanvasNavbar" aria-controls="offcanvasNavbar">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="offcanvas offcanvas-end" tabindex="-1" id="offcanvasNavbar"
+                    aria-labelledby="offcanvasNavbarLabel">
+                    <div class="offcanvas-header">
+                        <h5 class="offcanvas-title" id="offcanvasNavbarLabel">Menu</h5>
+                        <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
+                    </div>
+                    <div class="offcanvas-body">
+                        <ul class="navbar-nav justify-content-end flex-grow-1 pe-3">
+
+                            <li class="nav-item">
+                                <a class="navLink" href="../index.html">Inicio</a>
+                            </li>
+
+                            <li class="nav-item ">
+                                <a class="navLink" href="../Pages/especialidades.html">Especialidades</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="navLink" href="../Pages/staff.html">Staff Medico</a>
+                            </li>
+
+                            <li class="nav-item">
+                                <a class="navLink" href="../Pages/obrasSociales.html">Obras Sociales</a>
+                            </li>
+
+                            <li class="nav-item">
+                                <a class="navLink" href="../Pages/contacto.html">Contacto</a>
+                            </li>
+                        </ul>
+
+                    </div>
+                </div>
             </div>
-
-          
-                <ul>
-
-                    <li>
-                        <a href="../index.html">Inicio</a>
-                    </li>
-
-                    <li>
-                        <a href="../Pages/especialidades.html">Especialidades</a>
-                    </li>
-
-                    <li>
-                        <a href="../Pages/staff.html">Staff Médico</a>
-
-                    </li>
-
-                    <li>
-                        <a href="../Pages/obrasSociales.html">Obras Sociales</a>
-                    </li>
-
-                    <li>
-                        <a href="../Pages/contacto.html">Contacto</a>
-
-                    </li>
-
-                </ul>
         </nav>
 
         </div>
@@ -64,8 +73,7 @@
         <h1>Nuestras Especialidades</h1>
 
 
-        <section class="bloqueEspecialidad contenedorCentrar">
-
+        <section class="bloqueEspecialidad container-xxl">
 
                 <div class="bloqueEspecialidades__info">
 
@@ -151,7 +159,7 @@
 
                 </div>
 
-                <div class="bloqueEspecialidades__img">
+                <div class="bloqueEspecialidades__img2">
                     <img src="../Images/Estrabismo.png" alt="imagenEstrabismo">
                 </div>
 
@@ -237,15 +245,20 @@
 
                 </div>
 
-                <div class="bloqueEspecialidades__img">
+                <div class="bloqueEspecialidades__img4">
                     <img src="../Images/Retinoplatia.jfif" alt="imagenRetinoplatia">
 
                 </div>
 
-
+            </div>
 
         </section>
 
+        <div class="whatsaapIcon container-fluid">
+            <a href="https://web.whatsapp.com/">
+                <i class="fa-brands fa-square-whatsapp fa-4x"> </i>
+            </a>
+        </div>
 
     </main>
 
@@ -288,6 +301,12 @@
         <p class="footerLegal">Vision Center S.A. © 2022</p>
 
     </footer>
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
+        crossorigin="anonymous"></script>
+
+
 </body>
 
 </html>
