--- a/Pages/staff.html
+++ b/Pages/staff.html
@@ -7,7 +7,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Staff Médico</title>
     <link rel="shortcut icon" href="../Images/Logo.png">
-<link rel="stylesheet" href="/CSS/styles.css">
+    <link rel="stylesheet" href="/CSS/styles.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <script src="https://kit.fontawesome.com/08288d2c26.js" crossorigin="anonymous"></script>
 
 </head>
@@ -17,43 +19,47 @@
 
     <header>
 
-        <nav class="menuNav">
+        <nav class="navbar navbar-light fixed-top navbar-expand-lg navbarBg">
+            <div class="container-fluid">
+                <a class="navbar-brand" href="../index.html"> <img class="navbarBg__logo" src="../Images/logo.png"
+                        alt="logoNavegacion"></a>
+                <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas"
+                    data-bs-target="#offcanvasNavbar" aria-controls="offcanvasNavbar">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="offcanvas offcanvas-end" tabindex="-1" id="offcanvasNavbar"
+                    aria-labelledby="offcanvasNavbarLabel">
+                    <div class="offcanvas-header">
+                        <h5 class="offcanvas-title" id="offcanvasNavbarLabel">Menu</h5>
+                        <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
+                    </div>
+                    <div class="offcanvas-body">
+                        <ul class="navbar-nav justify-content-end flex-grow-1 pe-3">
 
-            <div class="menuNav__logo">
-                <a href="/index.html">
-                    <img src="/Images/logo.png" alt="logo">
-                </a>
+                            <li class="nav-item">
+                                <a class="navLink" href="../index.html">Inicio</a>
+                            </li>
+
+                            <li class="nav-item ">
+                                <a class="navLink" href="../Pages/especialidades.html">Especialidades</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="navLink" href="../Pages/staff.html">Staff Medico</a>
+                            </li>
+
+                            <li class="nav-item">
+                                <a class="navLink" href="../Pages/obrasSociales.html">Obras Sociales</a>
+                            </li>
+
+                            <li class="nav-item">
+                                <a class="navLink" href="../Pages/contacto.html">Contacto</a>
+                            </li>
+                        </ul>
+
+                    </div>
+                </div>
             </div>
-
-          
-                <ul>
-
-                    <li>
-                        <a href="../index.html">Inicio</a>
-                    </li>
-
-                    <li>
-                        <a href="../Pages/especialidades.html">Especialidades</a>
-                    </li>
-
-                    <li>
-                        <a href="../Pages/staff.html">Staff Médico</a>
-
-                    </li>
-
-                    <li>
-                        <a href="../Pages/obrasSociales.html">Obras Sociales</a>
-                    </li>
-
-                    <li>
-                        <a href="../Pages/contacto.html">Contacto</a>
-
-                    </li>
-
-                </ul>
         </nav>
-
-        </div>
 
     </header>
 
@@ -64,48 +70,48 @@
 
         <h1>CONOCÉ NUESTRO EQUIPO DE PROFESIONALES</h1>
 
+        <div class="container-md">
+            <div class="contenedorCard">
 
-        <div class="contenedorCard">
+                <div class="cards">
+                    <img src="../Images/DR6.jpg" alt="Imagen Dra Sevilla">
+                    <div class="cards__info">
+                        <p>Dra. Narcisa <span>Sevilla</span> </p>
+                    </div>
 
-            <div class="cards">
-                <img  src="../Images/DR6.jpg" alt="Imagen Dra Sevilla">
-                <div class="cards__info">
-                    <p>Dra. Narcisa <span>Sevilla</span> </p>
                 </div>
 
-            </div>
-        
-            <div class="cards" >
-                <img src="../Images/DR3.jpg" alt="Imagen Dr Tovar">
-                <div class="cards__info">
-                    <p>Dr. Teruel <span>Tovar</span></p>
+                <div class="cards">
+                    <img src="../Images/DR3.jpg" alt="Imagen Dr Tovar">
+                    <div class="cards__info">
+                        <p>Dr. Teruel <span>Tovar</span></p>
+                    </div>
                 </div>
-            </div>
 
-            <div class="cards">
-                <img src="../Images/DR4.jpg" alt="Imagen Dr Mancebo">
-                <div class="cards__info">
-                    <p>Dr. Pablo <span>Mancebo</span></p>
+                <div class="cards">
+                    <img src="../Images/DR4.jpg" alt="Imagen Dr Mancebo">
+                    <div class="cards__info">
+                        <p>Dr. Pablo <span>Mancebo</span></p>
+                    </div>
                 </div>
-            </div>
 
-            <div class="cards">
-                <img src="../Images/DR5.jpg" alt="Imagen Dr Villalobos">
-                <div class="cards__info">
-                    <p>Dr. Abraham <span>Villalobos</span></p>
+                <div class="cards">
+                    <img src="../Images/DR5.jpg" alt="Imagen Dr Villalobos">
+                    <div class="cards__info">
+                        <p>Dr. Abraham <span>Villalobos</span></p>
+                    </div>
                 </div>
-            </div>
 
-            <div class="cards" >
+                <div class="cards">
 
-                <img src="../Images/DR2.jpg" alt="Imagen Dr Morán">
-                <div class="cards__info">
-                    <p>Dra. Antonella <span>Morán</span></p>
+                    <img src="../Images/DR2.jpg" alt="Imagen Dr Morán">
+                    <div class="cards__info">
+                        <p>Dra. Antonella <span>Morán</span></p>
+                    </div>
                 </div>
-            </div>
 
-            <div class="cards">
-                <img src="../Images/DR1.jpg" alt="Imagen Dra Galvez">
+                <div class="cards">
+                    <img src="../Images/DR1.jpg" alt="Imagen Dra Galvez">
 
                     <div class="cards__info">
                         <p>Dra. Leticia <span>Galvez</span></p>
@@ -114,6 +120,30 @@
             </div>
 
         </div>
+
+        <div class="container">
+            <div class="row styleRow">
+                <div class="col">
+
+                    <h2> Atencion las 24hs</h2>
+
+                </div>
+                <div class="col  d-flex justify-content-center">
+                    <a href="../Pages/contacto.html">
+                        <button type="button" class="btn btn-outline-light btn-lg">
+                            Solicitar Turno</button>
+                    </a>
+                </div>
+            </div>
+        </div>
+
+        <div class="whatsaapIcon container-fluid">
+            <a href="https://web.whatsapp.com/">
+                <i class="fa-brands fa-square-whatsapp fa-4x"> </i>
+            </a>
+        </div>
+
+
 
     </main>
 
@@ -154,6 +184,11 @@
         <p class="footerLegal">Vision Center S.A. © 2022</p>
 
     </footer>
+
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
+        crossorigin="anonymous"></script>
 
 </body>
 
