--- a/index.html
+++ b/index.html
@@ -8,54 +8,101 @@
     <title>Nosotros</title>
     <link rel="shortcut icon" href="Images/Logo.png">
     <link rel="stylesheet" href="CSS/styles.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
     <script src="https://kit.fontawesome.com/08288d2c26.js" crossorigin="anonymous"></script>
+
 </head>
 
 <body>
     <header>
 
-        <nav class="menuNav">
+        <nav class="navbar navbar-light fixed-top navbar-expand-lg navbarBg">
+            <div class="container-fluid">
+                <a class="navbar-brand" href="index.html"> <img class="navbarBg__logo" src="Images/logo.png"
+                        alt="logoNavegacion"></a>
+                <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas"
+                    data-bs-target="#offcanvasNavbar" aria-controls="offcanvasNavbar">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="offcanvas offcanvas-end" tabindex="-1" id="offcanvasNavbar"
+                    aria-labelledby="offcanvasNavbarLabel">
+                    <div class="offcanvas-header">
+                        <h5 class="offcanvas-title" id="offcanvasNavbarLabel">Menu</h5>
+                        <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
+                    </div>
+                    <div class="offcanvas-body">
+                        <ul class="navbar-nav justify-content-end flex-grow-1 pe-3">
+                            <li class="nav-item ">
+                                <a class="navLink" href="/Pages/especialidades.html">Especialidades</a>
+                            </li>
+                            <li class="nav-item">
+                                
+                                <a class="navLink" href="Pages/staff.html">Staff Medico</a>
+                            </li>
 
-            <div class="menuNav__logo">
-                <a href="index.html">
-                    <img src="Images/logo.png" alt="logo">
-                </a>
+                            <li class="nav-item">
+                                <a class="navLink" href="Pages/obrasSociales.html">Obras Sociales</a>
+                            </li>
+
+                            <li class="nav-item">
+                                <a class="navLink" href="#testimonios">Testimonios</a>
+                            </li>
+
+                            <li class="nav-item">
+                                <a class="navLink" href="Pages/contacto.html">Contacto</a>
+                            </li>
+                        </ul>
+
+                    </div>
+                </div>
             </div>
-
-            <ul>
-
-                <li>
-                    <a href="./Pages/especialidades.html">Especialidades</a>
-                </li>
-
-                <li>
-                    <a href="./Pages/staff.html">Staff Médico</a>
-
-                </li>
-
-                <li>
-                    <a href="./Pages/obrasSociales.html">Obras Sociales</a>
-                </li>
-
-                <li>
-                    <a href="#testimonios">Testimonios</a>
-                </li>
-
-                <li>
-                    <a href="./Pages/contacto.html">Contacto</a>
-
-                </li>
-
-            </ul>
         </nav>
-
-        </div>
 
     </header>
 
     <main>
-        <seccion class="bloqueSeccion">
+
+        <section class="contenedorSlider">
+
+            <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel">
+                <div class="carousel-indicators">
+                    <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0"
+                        class="active" aria-current="true" aria-label="Slide 1"></button>
+                    <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1"
+                        aria-label="Slide 2"></button>
+                    <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2"
+                        aria-label="Slide 3"></button>
+                </div>
+                <div class="carousel-inner">
+                    <div class="carousel-item active contenedorSlider-sli"
+                        style="background-image:url(Images/slider\ 1.jfif)">
+
+                    </div>
+                    <div class="carousel-item" style="background-image:url(Images/Slider2.jpeg)">
+
+                    </div>
+                    <div class="carousel-item" style="background-image:url(Images/slider3.jpg)">
+
+                    </div>
+                </div>
+                <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators"
+                    data-bs-slide="prev">
+                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                    <span class="visually-hidden">Previous</span>
+                </button>
+                <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators"
+                    data-bs-slide="next">
+                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                    <span class="visually-hidden">Next</span>
+                </button>
+            </div>
+
+        </section>
+
+
+        <!-- <seccion class="bloqueSeccion">
             <div class="bloqueSeccion__img"></div>
 
 
@@ -69,29 +116,21 @@
                     <button>Pedir Turno</button>
                 </div>
 
-            </div>
+            </div> -->
 
-            <!-- Esta sección se comentó ya que se usará a futuro como Slider para completar la imagen superior
 
-            <img src="Images/Slider2.jpeg" alt="Imagen Slider2" style="width:1200px; ">
 
-            <div>
-                <p>Desde marzo de 1987, en Oftalmo Center brindamos un servicio de alta calidad, satisfaciendo las necesidades
+        <!-- <p>Desde marzo de 1987, en Oftalmo Center brindamos un servicio de alta calidad, satisfaciendo las necesidades
             de la nuestros pacientes, por medio de la especialización constante de nuestros profesionales.</p>
-            </div>
+          
 
-
-            <img src="Images/slider3.jpg" alt="Imagen Slider3" style="width:1200px; ">
-
-
-            <div>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eveniet, numquam commodi voluptatibus unde
                     sint
                     natus dolores necessitatibus. Dolorem pariatur impedit veniam perferendis exercitationem delectus
-                    corrupti. Minus, laudantium culpa. Ipsam, laboriosam.</p>
-            </div> -->
+                    corrupti. Minus, laudantium culpa. Ipsam, laboriosam.</p> -->
 
-        </seccion>
+
+
 
         <section>
 
@@ -195,7 +234,7 @@
 
                 </div>
 
-                <div class="infoNosotros__img">
+                <div class="infoNosotros__img2">
                     <img src="Images/Politica.jpeg" alt="imagen-nosotros">
                 </div>
 
@@ -207,33 +246,92 @@
 
         <div data-aos="fade-up" data-aos-anchor-placement="top-bottom">
 
+            <section class="container contenedorValoraciones">
 
-            <section class=" contenedorValoraciones">
                 <h2>Testimonios de Nuestros pacientes</h2>
 
-                <div class="valoracion" id="testimonios">
-                    <img class="valoracion__img" src="Images/5Stars.png" alt="estrellas">
-                    <p class="valoracion__texto"> Lorem ipsum dolor sit, amet consectetur adipisicing elit. Libero vero
-                        autem consectetur ipsum natus
-                        distinctio ipsam velit neque expedita dicta dolorem sit quibusdam culpa optio esse incidunt
-                        doloremque,
-                        voluptas tenetur?
-                        Architecto sit consequuntur nobis necessitatibus? Iure perferendis autem aut vero quae pariatur
-                        sequi!
-                        Ut iusto, eaque rem tenetur voluptates repellendus magnam, omnis excepturi nihil debitis
-                        perferendis
-                        soluta, facere id incidunt!
-                        <br> <span> hugo valdez</span>
-                    </p>
+                <div id="carouselExampleSlidesOnly" class="carousel slide" data-bs-ride="carousel">
+                    <div class="carousel-inner carouselTestimonial">
+                        <div class="carousel-item active" data-bs-interval="1500">
+                            <div class="valoracion__texto">
+                                <p>
+                                    Lorem ipsum dolor sit, amet consectetur adipisicing elit. Libero vero
+                                    autem consectetur ipsum natus
+                                    distinctio ipsam velit neque expedita dicta dolorem sit quibusdam culpa optio
+                                    esse incidunt
+                                    doloremque,
+                                    voluptas tenetur?
+                                    Architecto sit consequuntur nobis necessitatibus? Iure perferendis autem aut
+                                    vero quae pariatur
+                                    sequi!
+                                    Ut iusto, eaque rem tenetur voluptates repellendus magnam, omnis excepturi nihil
+                                    debitis
+                                    perferendis
+                                    soluta, facere id incidunt!
+                                    <br>
+                                    <span class="valoracion__cita"> hugo valdez</span>
+                                </p>
+                            </div>
+                        </div>
+
+
+                        <div class="carousel-item" data-bs-interval="1500">
+                            <div class="valoracion__texto">
+                                <p>
+                                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Aperiam consectetur nulla
+                                    corrupti fugit vero, doloremque veritatis deleniti harum neque voluptas ducimus ab
+                                    accusantium obcaecati dolorum praesentium recusandae similique fuga. Rem.
+                                    soluta, facere id incidunt!
+                                    Aperiam consectetur nulla
+                                    corrupti fugit vero, doloremque veritatis deleniti harum neque voluptas ducimus ab
+                                    accusantium obcaecati dolorum praesentium recusandae similique fuga. Rem.
+                                    soluta, facere id incidunt!
+
+                                    <br> <span class="valoracion__cita"> Gabriela Salazar</span>
+                                </p>
+                            </div>
+                        </div>
+
+
+                        <div class="carousel-item">
+                            <div class="valoracion__texto" data-bs-interval="1500">
+                                <p>
+                                    Lorem ipsum dolor sit, amet consectetur adipisicing elit. Libero vero
+                                    autem consectetur ipsum natus
+                                    distinctio ipsam velit neque expedita dicta dolorem sit quibusdam culpa optio esse
+                                    incidunt
+                                    doloremque,
+                                    voluptas tenetur?
+                                    Architecto sit consequuntur nobis necessitatibus? Iure perferendis autem aut vero
+                                    quae
+                                    pariatur
+                                    sequi!
+                                    Ut iusto, eaque rem tenetur voluptates repellendus magnam, omnis excepturi nihil
+                                    debitis
+                                    perferendis
+                                    soluta, facere id incidunt!
+                                    <br> <span class="valoracion__cita"> Diego Martinez</span>
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
             </section>
 
+        </div>
+
+
+        <div class="whatsaapIcon container-fluid">
+            <a href="https://web.whatsapp.com/">
+                <i class="fa-brands fa-square-whatsapp fa-4x"> </i>
+            </a>
         </div>
 
     </main>
 
     <footer>
 
-        <div class="contenedorFooter">
+        <div class="contenedorFooter ">
             <div class="bloqueFooter__logo">
                 <img src="/Images/Logo.png" alt="Logo">
             </div>
@@ -269,11 +367,15 @@
 
     </footer>
 
-
     <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
     <script>
         AOS.init();
     </script>
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
+        crossorigin="anonymous"></script>
+
 
 
 </body>
