--- a/Pages/staff.html
+++ b/Pages/staff.html
@@ -130,8 +130,10 @@
                 </div>
                 <div class="col  d-flex justify-content-center">
                     <a href="../Pages/contacto.html">
-                        <button type="button" class="btn btn-outline-light btn-lg">
-                            Solicitar Turno</button>
+                        <button type="button" class="btn btn-outline-light btn-lg btnFont">
+                            Solicitar Turno
+
+                        </button>
                     </a>
                 </div>
             </div>
