--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                                 <a class="navLink" href="/Pages/especialidades.html">Especialidades</a>
                             </li>
                             <li class="nav-item">
-                                
+
                                 <a class="navLink" href="Pages/staff.html">Staff Medico</a>
                             </li>
 
@@ -118,8 +118,6 @@
 
             </div> -->
 
-
-
         <!-- <p>Desde marzo de 1987, en Oftalmo Center brindamos un servicio de alta calidad, satisfaciendo las necesidades
             de la nuestros pacientes, por medio de la especialización constante de nuestros profesionales.</p>
           
@@ -128,8 +126,6 @@
                     sint
                     natus dolores necessitatibus. Dolorem pariatur impedit veniam perferendis exercitationem delectus
                     corrupti. Minus, laudantium culpa. Ipsam, laboriosam.</p> -->
-
-
 
 
         <section>
@@ -246,7 +242,7 @@
 
         <div data-aos="fade-up" data-aos-anchor-placement="top-bottom">
 
-            <section class="container contenedorValoraciones">
+            <section class="container contenedorValoraciones" id="testimonios">
 
                 <h2>Testimonios de Nuestros pacientes</h2>
 
@@ -268,7 +264,6 @@
                                     debitis
                                     perferendis
                                     soluta, facere id incidunt!
-                                    <br>
                                     <span class="valoracion__cita"> hugo valdez</span>
                                 </p>
                             </div>
@@ -284,10 +279,8 @@
                                     soluta, facere id incidunt!
                                     Aperiam consectetur nulla
                                     corrupti fugit vero, doloremque veritatis deleniti harum neque voluptas ducimus ab
-                                    accusantium obcaecati dolorum praesentium recusandae similique fuga. Rem.
-                                    soluta, facere id incidunt!
-
-                                    <br> <span class="valoracion__cita"> Gabriela Salazar</span>
+                                    accusantium obcaecati dolorum praesentium recusandae similique fuga. 
+                                    <span class="valoracion__cita"> Gabriela Salazar</span>
                                 </p>
                             </div>
                         </div>
@@ -299,18 +292,12 @@
                                     Lorem ipsum dolor sit, amet consectetur adipisicing elit. Libero vero
                                     autem consectetur ipsum natus
                                     distinctio ipsam velit neque expedita dicta dolorem sit quibusdam culpa optio esse
-                                    incidunt
-                                    doloremque,
-                                    voluptas tenetur?
+                                    incidunt doloremque, voluptas tenetur?
                                     Architecto sit consequuntur nobis necessitatibus? Iure perferendis autem aut vero
-                                    quae
-                                    pariatur
-                                    sequi!
+                                    quaepariatur sequi!
                                     Ut iusto, eaque rem tenetur voluptates repellendus magnam, omnis excepturi nihil
                                     debitis
-                                    perferendis
-                                    soluta, facere id incidunt!
-                                    <br> <span class="valoracion__cita"> Diego Martinez</span>
+                                    <span class="valoracion__cita"> Diego Martinez</span>
                                 </p>
                             </div>
                         </div>
