--- a/Pages/staff.html
+++ b/Pages/staff.html
@@ -63,7 +63,7 @@
 
     </header>
 
-    <main class="containerStaff contenedorCentrar">
+    <main class="containerStaff">
 
         <!-- La finalidad en la pagina staff es crear efectos en las cards con :hover -->
 
@@ -132,7 +132,6 @@
                     <a href="../Pages/contacto.html">
                         <button type="button" class="btn btn-outline-light btn-lg btnFont">
                             Solicitar Turno
-
                         </button>
                     </a>
                 </div>
