--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
 
                 <div class="carousel-inner">
 
-                    <div class="carousel-item active" data-bs-interval=2500
+                    <div class="carousel-item active" data-bs-interval="2500" 
                         style="background-image:url(Images/slider1.jfif)">
                         <div class="carouselFilter"></div>
                         <div class="carouselInfo">
@@ -96,11 +96,11 @@
                     </div>
 
 
-                    <div class="carousel-item" data-bs-interval=2500 style="background-image:url(Images/Slider2.jpeg) "> 
+                    <div class="carousel-item" data-bs-interval="2500" style="background-image:url(Images/Slider2.jpeg) "> 
                      
               
                     </div>
-                    <div class=" carousel-item" data-bs-interval=2500 style="background-image:url(Images/slider3.jpg)">
+                    <div class=" carousel-item" data-bs-interval="2500" style="background-image:url(Images/slider3.jpg)">
 
                     </div>
 
