--- a/Pages/obrasSociales.html
+++ b/Pages/obrasSociales.html
@@ -8,7 +8,7 @@
     <title>Document</title>
     <link rel="shortcut icon" href="../Images/Logo.png">
     <!-- <link rel="stylesheet" href="/CSS/styles2.css"> -->
-    <link rel="stylesheet" href="CSS/estilos.css">
+    <link rel="stylesheet" href="../CSS/estilos.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <script src="https://kit.fontawesome.com/08288d2c26.js" crossorigin="anonymous"></script>
