--- a/Pages/staff.html
+++ b/Pages/staff.html
@@ -132,7 +132,7 @@
                 <div class="col  d-flex justify-content-center">
                     <a href="../Pages/contacto.html">
                         <button type="button" class="btn btn-outline-light btn-lg btnFont">
-                            Solicitar Turno
+                         <h5>Solicitar Turno</h5>   
                         </button>
                     </a>
                 </div>
