--- a/Pages/staff.html
+++ b/Pages/staff.html
@@ -5,6 +5,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta
+        description="Contamos con grandes profesionales dedicadados a la salud y al bienestar de sus ojos, podés solicitar turno con alguno de ellos">
+    <meta Keywords="especialidades, retina, glaucoma, cataratas, oftalmología general, Vítreo">
     <title>Staff Médico</title>
     <link rel="shortcut icon" href="../Images/Logo.png">
     <!-- <link rel="stylesheet" href="/CSS/styles2.css"> -->
@@ -77,7 +80,9 @@
                 <div class="cards">
                     <img src="../Images/DR6.jpg" alt="Imagen Dra Sevilla">
                     <div class="cards__info">
-                        <p>Dra. Narcisa <span>Sevilla</span> </p>
+                        <h2>Dra. Narcisa Sevilla</h2>
+                        <p>Oftalmología Pediatra</p>
+                        <p>Estrabismo</p>
                     </div>
 
                 </div>
@@ -85,21 +90,27 @@
                 <div class="cards">
                     <img src="../Images/DR3.jpg" alt="Imagen Dr Tovar">
                     <div class="cards__info">
-                        <p>Dr. Teruel <span>Tovar</span></p>
+                        <h2>Dra.Teruel Tovar</h2>
+                        <p>Oftalmología General</p>
+                        <p>Retina y Vítreo</p>
                     </div>
                 </div>
 
                 <div class="cards">
                     <img src="../Images/DR4.jpg" alt="Imagen Dr Mancebo">
                     <div class="cards__info">
-                        <p>Dr. Pablo <span>Mancebo</span></p>
+                        <h2>Dr. Pablo Mancevo</h2>
+                        <p>Cataratas</p>
+                        <p>Cirugía Reflectiva Corneal</p>
                     </div>
                 </div>
 
                 <div class="cards">
                     <img src="../Images/DR5.jpg" alt="Imagen Dr Villalobos">
                     <div class="cards__info">
-                        <p>Dr. Abraham <span>Villalobos</span></p>
+                        <h2>Dr. Abraham Villalobos</h2>
+                        <p>Oftalmología General</p>
+                        <p>Glaucoma</p>
                     </div>
                 </div>
 
@@ -107,7 +118,9 @@
 
                     <img src="../Images/DR2.jpg" alt="Imagen Dr Morán">
                     <div class="cards__info">
-                        <p>Dra. Antonella <span>Morán</span></p>
+                        <h2>Dra. Antonella Morán</h2>
+                        <p>Transplante de Córnea</p>
+                        <p>Cataratas</p>
                     </div>
                 </div>
 
@@ -115,7 +128,9 @@
                     <img src="../Images/DR1.jpg" alt="Imagen Dra Galvez">
 
                     <div class="cards__info">
-                        <p>Dra. Leticia <span>Galvez</span></p>
+                        <h2>Dr. Leticia Galvez</h2>
+                        <p>Cataratas</p>
+                        <p>Retina</p>
                     </div>
                 </div>
             </div>
@@ -132,7 +147,7 @@
                 <div class="col  d-flex justify-content-center">
                     <a href="../Pages/contacto.html">
                         <button type="button" class="btn btn-outline-light btn-lg btnFont">
-                         <h5>Solicitar Turno</h5>   
+                            <h5>Solicitar Turno</h5>
                         </button>
                     </a>
                 </div>
