--- a/index.html
+++ b/index.html
@@ -5,7 +5,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Nosotros</title>
+    <meta description="Instituto privado ONNIS de gran calidad y servicios para la salud y bienestar de nuestros ojos">
+    <meta Keywords="oftalmología oftalmológicos clinica privada">
+    <title>Nuestra Clínica</title>
     <link rel="shortcut icon" href="Images/Logo.png">
     <!-- <link rel="stylesheet" href="CSS/styles2.css"> -->
     <link rel="stylesheet" href="CSS/estilos.css">
