--- a/Pages/contacto.html
+++ b/Pages/contacto.html
@@ -6,7 +6,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <meta description="Para consultas y turnos en Onnis, completa el formulario con los datos indicados">
+    <meta Keywords="contacto, Teléfono, Email, turno, consultas, informe, oftalmología, instituto">
+    <title>Contacto</title>
     <link rel="shortcut icon" href="../Images/Logo.png">
     <!-- <link rel="stylesheet" href="/CSS/styles2.css"> -->
     <link rel="stylesheet" href="../CSS/estilos.css">
