--- a/Pages/especialidades.html
+++ b/Pages/especialidades.html
@@ -5,7 +5,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <meta description="Conocé nuestras especialiadades de la clínica de ojos ONNIS">
+    <meta Keywords="especialidades, cataratas, glaucoma, retinoplatia, estrabismo, oftalmología">
+    <title>Especialidades</title>
     <link rel="shortcut icon" href="../Images/Logo.png">
     <!-- <link rel="stylesheet" href="/CSS/styles2.css"> -->
     <link rel="stylesheet" href="../CSS/estilos.css">
