--- a/Pages/contacto.html
+++ b/Pages/contacto.html
@@ -24,7 +24,7 @@
         <nav class="navbar navbar-light fixed-top navbar-expand-lg navbarBg">
             <div class="container-fluid">
                 <a class="navbar-brand" href="../index.html"> <img class="navbarBg__logo" src="../Images/logo.png"
-                        alt="logoNavegacion"></a>
+                        alt="logoprincipal"></a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas"
                     data-bs-target="#offcanvasNavbar" aria-controls="offcanvasNavbar">
                     <span class="navbar-toggler-icon"></span>
@@ -124,7 +124,7 @@
 
         <div class="bloqueFooter">
             <div class="bloqueFooter__logo">
-                <img src="../Images/Logo.png" alt="Logo">
+                <img src="../Images/Logo.png" alt="Logofooter">
             </div>
 
             <div class="bloqueFooter__contacto">
