--- a/Pages/obrasSociales.html
+++ b/Pages/obrasSociales.html
@@ -161,7 +161,7 @@
 
         <div class="bloqueFooter">
             <div class="bloqueFooter__logo">
-                <img src="../Images/Logo.png" alt="Logo">
+                <img src="../Images/Logo.png" alt="Logofooter">
             </div>
 
             <div class="bloqueFooter__contacto">
