--- a/Pages/especialidades.html
+++ b/Pages/especialidades.html
@@ -73,7 +73,7 @@
         <h1>Nuestras Especialidades</h1>
 
 
-        <section class="bloqueEspecialidad container-xxl">
+        <section class="bloqueEspecialidad">
 
                 <div class="bloqueEspecialidad__info">
 
@@ -117,7 +117,7 @@
                 </div>
 
                 <div class="bloqueEspecialidad__img">
-                    <img src="../Images/catarata.jfif" alt="imagenCatarata">
+                    <img  alt="imagenCatarata">
                 </div>
 
 
