--- a/index.html
+++ b/index.html
@@ -93,10 +93,10 @@
                             <h1>Profesionales de Excelente Trayectoria y Confianza</h1>
                             <div class="carouselInfo__btn">
                                 <a target="_blank" href="https://web.whatsapp.com/">
-                                    <button>Llamar Ahora </button></a>
+                                    <button class="hover-btn">Llamar Ahora </button></a>
 
                                 <a target="_blank" href="/Pages/contacto.html">
-                                    <button> Pedir Turno </button> </a>
+                                    <button class="hover-btn"> Pedir Turno </button> </a>
                             </div>
 
                         </div>
@@ -108,14 +108,14 @@
                         <img srcset="../Images/Movil/Slider2M.png 768w,
                         ../Images/Tablet/Slider2T.png 1024w,
                         ../Images/Desktop/Slider2D.png 1025w" class="d-block w-100"
-                            alt="Paciente oftalmológica con anteojos" loading="lazy">
+                            alt="Paciente oftalmológica con anteojos">
 
                     </div>
                     <div class=" carousel-item" data-bs-interval="2500">
                         <img srcset="../Images/Movil/Slider3M.png 768w,
                         ../Images/Tablet/Slider3T.png 1024w,
                         ../Images/Desktop/Slider3D.png 1025w" class="d-block w-100" alt="medicion de ojos"
-                            loading="lazy">
+                           >
 
                     </div>
 
