--- a/Pages/especialidades.html
+++ b/Pages/especialidades.html
@@ -73,7 +73,7 @@
         <h1>Nuestras Especialidades</h1>
 
 
-        <section class="bloqueEspecialidad container-sm">
+        <section class="bloqueEspecialidad container-xxl">
 
                 <div class="bloqueEspecialidad__info">
 
