--- a/Pages/contacto.html
+++ b/Pages/contacto.html
@@ -23,8 +23,8 @@
     <header>
         <nav class="navbar navbar-light fixed-top navbar-expand-lg navbarBg">
             <div class="container-fluid">
-                <a target="_blank" class="navbar-brand" href="../index.html"> <img class="navbarBg__logo"
-                        src="../Images/logo.png" alt="logoprincipal"></a>
+                <a class="navbar-brand" href="../index.html"> <img class="navbarBg__logo" src="../Images/logo.png"
+                        alt="logoprincipal"></a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas"
                     data-bs-target="#offcanvasNavbar" aria-controls="offcanvasNavbar">
                     <span class="navbar-toggler-icon"></span>
@@ -39,23 +39,22 @@
                         <ul class="navbar-nav justify-content-end flex-grow-1 pe-3">
 
                             <li class="nav-item">
-                                <a target="_blank" class="navLink" href="../index.html">Inicio</a>
+                                <a class="navLink" href="../index.html">Inicio</a>
                             </li>
 
                             <li class="nav-item ">
-                                <a target="_blank" class="navLink"
-                                    href="../Pages/especialidades.html">Especialidades</a>
+                                <a class="navLink" href="../Pages/especialidades.html">Especialidades</a>
                             </li>
                             <li class="nav-item">
-                                <a target="_blank" class="navLink" href="../Pages/staff.html">Staff Medico</a>
-                            </li>
-
-                            <li class="nav-item">
-                                <a target="_blank" class="navLink" href="../Pages/obrasSociales.html">Obras Sociales</a>
+                                <a class="navLink" href="../Pages/staff.html">Staff Medico</a>
                             </li>
 
                             <li class="nav-item">
-                                <a target="_blank" class="navLink" href="../Pages/contacto.html">Contacto</a>
+                                <a class="navLink" href="../Pages/obrasSociales.html">Obras Sociales</a>
+                            </li>
+
+                            <li class="nav-item">
+                                <a class="navLink" href="../Pages/contacto.html">Contacto</a>
                             </li>
                         </ul>
 
@@ -150,10 +149,16 @@
             <div class="bloqueFooter__RRSS">
                 <h3>Nuestras <br> redes sociales</h3>
                 <div class="icons">
-                    <i class="fa-brands fa-facebook fa-xl"></i>
-                    <i class="fa-brands fa-instagram fa-xl"></i>
+
+                    <a target="_blank" href="https://www.facebook.com/"> <i class="fa-brands fa-facebook fa-xl"></i></a>
+
+                    </i>
+
+                    <a target="_blank" href="https://www.instagram.com/"> <i class="fa-brands fa-instagram fa-xl"></i>
+                    </a>
                 </div>
             </div>
+        </div>
         </div>
 
         <p class="footerLegal">Vision Center S.A. © 2022</p>
