--- a/Pages/obrasSociales.html
+++ b/Pages/obrasSociales.html
@@ -5,7 +5,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta description=" Las siguientes entidades prestatarias de servicios de salud que se atienden en nuestra institución ONNIS, pueden sufrir alguna variación de cobertura. Aconsejamos consultar frecuentemente dicho estado">
+    <meta
+        description=" Las siguientes entidades prestatarias de servicios de salud que se atienden en nuestra institución ONNIS, pueden sufrir alguna variación de cobertura. Aconsejamos consultar frecuentemente dicho estado">
     <meta Keywords="Obras sociales, Osde, APOS, GALEANO, swissmedical, FEDERADA SALUD">
     <title>Obras Sociales</title>
     <link rel="shortcut icon" href="../Images/Logo.png">
@@ -23,7 +24,7 @@
     <header>
         <nav class="navbar navbar-light fixed-top navbar-expand-lg navbarBg">
             <div class="container-fluid">
-                <a target="_blank" class="navbar-brand" href="../index.html"> <img class="navbarBg__logo" src="../Images/logo.png"
+                <a class="navbar-brand" href="../index.html"> <img class="navbarBg__logo" src="../Images/logo.png"
                         alt="logoNavegacion"></a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas"
                     data-bs-target="#offcanvasNavbar" aria-controls="offcanvasNavbar">
@@ -39,22 +40,22 @@
                         <ul class="navbar-nav justify-content-end flex-grow-1 pe-3">
 
                             <li class="nav-item">
-                                <a target="_blank" target="_blank" class="navLink" href="../index.html">Inicio</a>
+                                <a class="navLink" href="../index.html">Inicio</a>
                             </li>
 
                             <li class="nav-item ">
-                                <a target="_blank" class="navLink" href="../Pages/especialidades.html">Especialidades</a>
+                                <a class="navLink" href="../Pages/especialidades.html">Especialidades</a>
                             </li>
                             <li class="nav-item">
-                                <a target="_blank" class="navLink" href="../Pages/staff.html">Staff Medico</a>
-                            </li>
-
-                            <li class="nav-item">
-                                <a target="_blank" class="navLink" href="../Pages/obrasSociales.html">Obras Sociales</a>
+                                <a class="navLink" href="../Pages/staff.html">Staff Medico</a>
                             </li>
 
                             <li class="nav-item">
-                                <a target="_blank" class="navLink" href="../Pages/contacto.html">Contacto</a>
+                                <a class="navLink" href="../Pages/obrasSociales.html">Obras Sociales</a>
+                            </li>
+
+                            <li class="nav-item">
+                                <a class="navLink" href="../Pages/contacto.html">Contacto</a>
                             </li>
                         </ul>
 
@@ -81,7 +82,7 @@
 
         </div>
 
-        
+
         <div class="container styleOSbt">
 
             <div class="row">
@@ -183,8 +184,13 @@
             <div class="bloqueFooter__RRSS">
                 <h3>Nuestras <br> redes sociales</h3>
                 <div class="icons">
-                    <i class="fa-brands fa-facebook fa-xl"></i>
-                    <i class="fa-brands fa-instagram fa-xl"></i>
+
+                    <a target="_blank" href="https://www.facebook.com/"> <i class="fa-brands fa-facebook fa-xl"></i></a>
+
+                    </i>
+
+                    <a target="_blank" href="https://www.instagram.com/"> <i class="fa-brands fa-instagram fa-xl"></i>
+                    </a>
                 </div>
             </div>
         </div>
