--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
         <nav class="navbar navbar-light fixed-top navbar-expand-lg navbarBg">
             <div class="container-fluid">
-                <a target="_blank" class="navbar-brand" href="index.html"> <img class="navbarBg__logo" src="Images/logo.png"
+                <a class="navbar-brand" href="index.html"> <img class="navbarBg__logo" src="Images/logo.png"
                         alt="logoprincipal" loading="lazy"></a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas"
                     data-bs-target="#offcanvasNavbar" aria-controls="offcanvasNavbar">
@@ -38,23 +38,23 @@
                     <div class="offcanvas-body">
                         <ul class="navbar-nav justify-content-end flex-grow-1 pe-3">
                             <li class="nav-item ">
-                                <a target="_blank"  class="navLink" href="/Pages/especialidades.html">Especialidades</a>
+                                <a class="navLink" href="/Pages/especialidades.html">Especialidades</a>
                             </li>
                             <li class="nav-item">
 
-                                <a target="_blank" class="navLink" href="Pages/staff.html">Staff Medico</a>
+                                <a class="navLink" href="Pages/staff.html">Staff Medico</a>
                             </li>
 
                             <li class="nav-item">
-                                <a target="_blank" class="navLink" href="Pages/obrasSociales.html">Obras Sociales</a>
+                                <a class="navLink" href="Pages/obrasSociales.html">Obras Sociales</a>
                             </li>
 
                             <li class="nav-item">
-                                <a target="_blank" class="navLink" href="#testimonios">Testimonios</a>
+                                <a class="navLink" href="#testimonios">Testimonios</a>
                             </li>
 
                             <li class="nav-item">
-                                <a target="_blank" class="navLink" href="Pages/contacto.html">Contacto</a>
+                                <a class="navLink" href="Pages/contacto.html">Contacto</a>
                             </li>
                         </ul>
 
@@ -85,17 +85,16 @@
 
                         <img srcset="../Images/Movil/Slider1M.png 768w,
                         ../Images/Tablet/Slider1T.png 1024w,
-                        ../Images/Desktop/Slider1D.png 1025w" class="d-block w-100"
-                            alt="lente de medida oftalmológico" loading="lazy">
+                        ../Images/Desktop/Slider1D.png 1025w" class="d-block w-100" alt="lente de medida oftalmológico">
 
                         <div class="carouselFilter"></div>
                         <div class="carouselInfo">
                             <h1>Profesionales de Excelente Trayectoria y Confianza</h1>
                             <div class="carouselInfo__btn">
-                                <a target="_blank" href="https://web.whatsapp.com/">
+                                <a href="https://web.whatsapp.com/">
                                     <button class="hover-btn">Llamar Ahora </button></a>
 
-                                <a target="_blank" href="/Pages/contacto.html">
+                                <a href="/Pages/contacto.html">
                                     <button class="hover-btn"> Pedir Turno </button> </a>
                             </div>
 
@@ -114,8 +113,7 @@
                     <div class=" carousel-item" data-bs-interval="2500">
                         <img srcset="../Images/Movil/Slider3M.png 768w,
                         ../Images/Tablet/Slider3T.png 1024w,
-                        ../Images/Desktop/Slider3D.png 1025w" class="d-block w-100" alt="medicion de ojos"
-                           >
+                        ../Images/Desktop/Slider3D.png 1025w" class="d-block w-100" alt="medicion de ojos">
 
                     </div>
 
@@ -323,8 +321,13 @@
             <div class="bloqueFooter__RRSS">
                 <h3>Nuestras <br> redes sociales</h3>
                 <div class="icons">
-                    <i class="fa-brands fa-facebook fa-xl"></i>
-                    <i class="fa-brands fa-instagram fa-xl"></i>
+                    
+                        <a target="_blank" href="https://www.facebook.com/"> <i class="fa-brands fa-facebook fa-xl"></i></a>
+
+                    </i>
+
+                    <a target="_blank" href="https://www.instagram.com/"> <i class="fa-brands fa-instagram fa-xl"></i>
+                    </a>
                 </div>
             </div>
         </div>
